Refresh reusable header styling for latest frontend updates

--- a/frontend/account.html
+++ b/frontend/account.html
@@ -21,7 +21,7 @@
         <nav id="menu" class="hidden md:flex md:flex-col w-64 flex-shrink-0 bg-transparent p-6 overflow-y-auto"></nav>
         <main class="flex-1 min-w-0 overflow-x-auto p-6">
             <header class="app-page-header">
-            <h1 id="account-name" class="app-page-title">Account Balance</h1>
+            <h1 id="account-name" class="app-page-title text-indigo-700">Account Balance</h1>
             </header>
             <p id="account-details" class="mb-4 text-gray-600"></p>
             <p class="mb-4">View the balance over time based on the latest bank statement.</p>
