--- a/frontend/budgets.html
+++ b/frontend/budgets.html
@@ -23,7 +23,7 @@
     <nav id="menu" class="hidden md:flex md:flex-col w-64 flex-shrink-0 bg-transparent p-6 overflow-y-auto"></nav>
     <main class="ops-main flex-1 min-w-0 overflow-x-auto">
         <header class="app-page-header">
-        <h1 class="app-page-title">Budgets</h1>
+        <h1 class="app-page-title text-indigo-700">Budgets</h1>
         </header>
         <p class="mb-4">Set monthly spending limits for categories and monitor progress. Use this page to plan ahead and see where you may need to adjust your spending.</p>
         <section class="ops-section">
