--- a/frontend/categories.html
+++ b/frontend/categories.html
@@ -19,7 +19,7 @@
         <nav id="menu" class="hidden md:flex md:flex-col w-64 flex-shrink-0 bg-transparent p-6 overflow-y-auto"></nav>
         <main class="flex-1 min-w-0 overflow-x-auto p-6">
             <header class="app-page-header">
-            <h1 class="app-page-title">Manage Categories</h1>
+            <h1 class="app-page-title text-indigo-700">Manage Categories</h1>
             </header>
             <p class="mb-4">Create categories and assign tags to organise your transactions. A well-maintained list keeps reports clear and makes searching easier.</p>
             <form id="category-form" class="space-y-4">
