--- a/frontend/monthly_statement.html
+++ b/frontend/monthly_statement.html
@@ -22,7 +22,7 @@
         <nav id="menu" class="hidden md:flex md:flex-col w-64 flex-shrink-0 bg-transparent p-6 overflow-y-auto"></nav>
         <main class="flex-1 min-w-0 overflow-x-auto p-6">
             <header class="app-page-header">
-            <h1 id="page-title" class="app-page-title">Monthly Statement</h1>
+            <h1 id="page-title" class="app-page-title text-indigo-700">Monthly Statement</h1>
             </header>
             <p class="mb-4">Select a month to view a detailed list of transactions. Reviewing each line ensures the data is accurate and properly tagged.</p>
             <div class="cards">
