--- a/frontend/projects_board.html
+++ b/frontend/projects_board.html
@@ -20,7 +20,7 @@
     <nav id="menu" class="hidden md:flex md:flex-col w-64 flex-shrink-0 bg-transparent p-6 overflow-y-auto"></nav>
     <main class="flex-1 min-w-0 overflow-x-auto p-6 space-y-6">
         <header class="app-page-header">
-        <h1 class="app-page-title">Project Board</h1>
+        <h1 class="app-page-title text-indigo-700">Project Board</h1>
         </header>
         <p class="mb-4">Browse all active projects in a card layout.</p>
 
