--- a/frontend/segments.html
+++ b/frontend/segments.html
@@ -19,7 +19,7 @@
         <nav id="menu" class="hidden md:flex md:flex-col w-64 flex-shrink-0 bg-transparent p-6 overflow-y-auto"></nav>
         <main class="flex-1 min-w-0 overflow-x-auto p-6">
             <header class="app-page-header">
-            <h1 class="app-page-title">Manage Segments</h1>
+            <h1 class="app-page-title text-indigo-700">Manage Segments</h1>
             </header>
             <p class="mb-4">Create segments to group categories for broader analysis. Drag categories between segments to adjust their grouping.</p>
             <form id="segment-form" class="space-y-4">
