--- a/frontend/upload.html
+++ b/frontend/upload.html
@@ -18,7 +18,7 @@
         <nav id="menu" class="hidden md:flex md:flex-col w-64 flex-shrink-0 bg-transparent p-6 overflow-y-auto"></nav>
         <main class="flex-1 min-w-0 overflow-x-auto p-6">
             <header class="app-page-header">
-            <h1 class="app-page-title">Upload OFX Files</h1>
+            <h1 class="app-page-title text-indigo-700">Upload OFX Files</h1>
             </header>
         <p class="mb-4">Upload one or more OFX statements from your bank to import transactions into the system. The file contents will be processed and your data added to the database for review.</p>
             <form action="../php_backend/public/upload_ofx.php" method="POST" enctype="multipart/form-data" class="space-y-4">
