--- a/frontend/2fa.html
+++ b/frontend/2fa.html
@@ -22,7 +22,7 @@
         <main class="flex-1 min-w-0 overflow-x-auto p-6">
             <div class="flex items-center mb-4">
                 <header class="app-page-header">
-                <h1 class="app-page-title flex-1"><i class="fas fa-shield-halved inline w-6 h-6 mr-2"></i>Two-Factor Authentication</h1>
+                <h1 class="app-page-title text-indigo-700 flex-1"><i class="fas fa-shield-halved inline w-6 h-6 mr-2"></i>Two-Factor Authentication</h1>
                 </header>
                 <button id="help-btn" class="text-indigo-600 font-light"><i class="fas fa-question-circle inline w-5 h-5"></i></button>
             </div>
