--- a/frontend/ai_feedback.html
+++ b/frontend/ai_feedback.html
@@ -18,7 +18,7 @@
     <nav id="menu" class="hidden md:flex md:flex-col w-64 flex-shrink-0 bg-transparent p-6 overflow-y-auto"></nav>
     <main class="flex-1 min-w-0 overflow-x-auto p-6 space-y-6">
         <header class="app-page-header">
-        <h1 class="app-page-title">AI Feedback</h1>
+        <h1 class="app-page-title text-indigo-700">AI Feedback</h1>
         </header>
         <p class="mb-4">Request an AI-generated overview of your finances for the last 12 months.</p>
         <section>
