--- a/frontend/ai_tags.html
+++ b/frontend/ai_tags.html
@@ -18,7 +18,7 @@
     <nav id="menu" class="hidden md:flex md:flex-col w-64 flex-shrink-0 bg-transparent p-6 overflow-y-auto"></nav>
     <main class="flex-1 min-w-0 overflow-x-auto p-6 space-y-6">
         <header class="app-page-header">
-        <h1 class="app-page-title">AI Tags</h1>
+        <h1 class="app-page-title text-indigo-700">AI Tags</h1>
         </header>
         <p class="mb-4">Configure OpenAI and automatically tag transactions.</p>
 
