--- a/frontend/all_years_dashboard.html
+++ b/frontend/all_years_dashboard.html
@@ -21,7 +21,7 @@
         <nav id="menu" class="hidden md:flex md:flex-col w-64 flex-shrink-0 bg-transparent p-6 overflow-y-auto"></nav>
         <main class="flex-1 min-w-0 overflow-x-auto p-6">
             <header class="app-page-header">
-            <h1 class="app-page-title">All Years Dashboard</h1>
+            <h1 class="app-page-title text-indigo-700">All Years Dashboard</h1>
             </header>
             <p class="mb-4">Compare financial totals across every recorded year to reveal long-term trends and patterns in your finances.</p>
 
