--- a/frontend/backup.html
+++ b/frontend/backup.html
@@ -19,7 +19,7 @@
         <nav id="menu" class="hidden md:flex md:flex-col w-64 flex-shrink-0 bg-transparent p-6 overflow-y-auto"></nav>
         <main class="flex-1 min-w-0 overflow-x-auto p-6 space-y-6">
             <header class="app-page-header">
-            <h1 class="app-page-title">Backup &amp; Restore</h1>
+            <h1 class="app-page-title text-indigo-700">Backup &amp; Restore</h1>
             </header>
             <p class="mb-4">Create backups of your data or restore from an earlier snapshot. Use the tools below to download a copy of your information or load a previous backup.</p>
             <section class="cards space-y-4">
