--- a/frontend/dedupe.html
+++ b/frontend/dedupe.html
@@ -19,7 +19,7 @@
         <nav id="menu" class="hidden md:flex md:flex-col w-64 flex-shrink-0 bg-transparent p-6 overflow-y-auto"></nav>
         <main class="flex-1 min-w-0 overflow-x-auto p-6">
             <header class="app-page-header">
-            <h1 class="app-page-title">Duplicate Transactions</h1>
+            <h1 class="app-page-title text-indigo-700">Duplicate Transactions</h1>
             </header>
             <p class="mb-4">Remove unwanted duplicate entries to keep your records accurate.</p>
             <div class="cards">
