--- a/frontend/groups.html
+++ b/frontend/groups.html
@@ -21,7 +21,7 @@
         <nav id="menu" class="hidden md:flex md:flex-col w-64 flex-shrink-0 bg-transparent p-6 overflow-y-auto"></nav>
         <main class="flex-1 min-w-0 overflow-x-auto p-6">
             <header class="app-page-header">
-            <h1 class="app-page-title">Manage Groups</h1>
+            <h1 class="app-page-title text-indigo-700">Manage Groups</h1>
             </header>
             <p class="mb-4">Create groups to collect related categories for reporting and analysis. Grouping similar categories helps you see broader spending patterns.</p>
             <form id="group-form" class="space-y-4">
