--- a/frontend/ignored.html
+++ b/frontend/ignored.html
@@ -18,7 +18,7 @@
         <nav id="menu" class="hidden md:flex md:flex-col w-64 flex-shrink-0 bg-transparent p-6 overflow-y-auto"></nav>
         <main class="flex-1 min-w-0 overflow-x-auto p-6">
             <header class="app-page-header">
-            <h1 class="app-page-title">Ignored Transactions</h1>
+            <h1 class="app-page-title text-indigo-700">Ignored Transactions</h1>
             </header>
             <p class="mb-4">Transactions tagged with <strong>IGNORE</strong> are hidden from dashboards and reports. Use this page to review and restore them.</p>
             <div id="ignored-table"></div>
