--- a/frontend/missing_tags.html
+++ b/frontend/missing_tags.html
@@ -20,7 +20,7 @@
         <nav id="menu" class="hidden md:flex md:flex-col w-64 flex-shrink-0 bg-transparent p-6 overflow-y-auto"></nav>
         <main class="flex-1 min-w-0 overflow-x-auto p-6">
             <header class="app-page-header">
-            <h1 class="app-page-title">Missing Tags</h1>
+            <h1 class="app-page-title text-indigo-700">Missing Tags</h1>
             </header>
             <p class="mb-4">Identify transactions that have not yet been tagged so you can assign categories before they slip through your reports.</p>
             <div id="untagged-table"></div>
