--- a/frontend/palette.html
+++ b/frontend/palette.html
@@ -17,7 +17,7 @@
     <nav id="menu" class="hidden md:flex md:flex-col w-64 flex-shrink-0 bg-transparent p-6 overflow-y-auto"></nav>
     <main class="flex-1 p-6">
       <header class="app-page-header">
-      <h1 class="app-page-title">Palette Settings</h1>
+      <h1 class="app-page-title text-indigo-700">Palette Settings</h1>
       </header>
 
       <div class="cards space-y-4">
