--- a/frontend/pivot.html
+++ b/frontend/pivot.html
@@ -21,7 +21,7 @@
         <nav id="menu" class="hidden md:flex md:flex-col w-64 flex-shrink-0 bg-transparent p-6 overflow-y-auto"></nav>
         <main class="flex-1 min-w-0 overflow-x-auto p-6 space-y-6">
             <header class="app-page-header">
-            <h1 class="app-page-title">Pivot Analysis</h1>
+            <h1 class="app-page-title text-indigo-700">Pivot Analysis</h1>
             </header>
             <p class="mb-4">Explore transactions using a flexible pivot table. Choose a year or analyse all recorded data.</p>
             <section class="space-y-4">
