--- a/frontend/tags.html
+++ b/frontend/tags.html
@@ -21,7 +21,7 @@
         <nav id="menu" class="hidden md:flex md:flex-col w-64 flex-shrink-0 bg-transparent p-6 overflow-y-auto"></nav>
         <main class="flex-1 min-w-0 overflow-x-auto p-6">
             <header class="app-page-header">
-            <h1 class="app-page-title">Manage Tags</h1>
+            <h1 class="app-page-title text-indigo-700">Manage Tags</h1>
             </header>
             <p class="mb-4">Create new tags and manage existing ones for categorising transactions. Tags act like labels that make reports and searches more meaningful.</p>
             <form id="tag-form" class="space-y-4">
