--- a/frontend/transfers.html
+++ b/frontend/transfers.html
@@ -21,7 +21,7 @@
         <main class="flex-1 min-w-0 overflow-x-auto p-6 space-y-6">
             <section>
                 <header class="app-page-header">
-                    <h1 class="app-page-title">Detected Transfers</h1>
+                    <h1 class="app-page-title text-indigo-700">Detected Transfers</h1>
                     <div class="app-page-header-actions space-x-2">
                         <button id="assist-btn" class="bg-indigo-600 text-white px-3 py-1 rounded text-sm"><i class="fas fa-magic inline w-4 h-4 mr-1"></i>Assist</button>
                         <button id="mark-all" class="bg-green-600 text-white px-3 py-1 rounded text-sm"><i class="fas fa-check-double inline w-4 h-4 mr-1"></i>Mark All</button>
