--- a/frontend/yearly_dashboard.html
+++ b/frontend/yearly_dashboard.html
@@ -22,7 +22,7 @@
         <nav id="menu" class="hidden md:flex md:flex-col w-64 flex-shrink-0 bg-transparent p-6 overflow-y-auto"></nav>
         <main class="ops-main flex-1 min-w-0 overflow-x-auto">
             <header class="app-page-header">
-            <h1 class="app-page-title">Yearly Dashboard</h1>
+            <h1 class="app-page-title text-indigo-700">Yearly Dashboard</h1>
             </header>
             <p class="mb-4">Analyse totals for a single year through charts and tables to understand how income and spending evolved month by month.</p>
             <section class="ops-section">
